Updated Physics Based Model

--- a/bin/run_physics_model.ipynb
+++ b/bin/run_physics_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "80dc619c",
    "metadata": {},
    "outputs": [
@@ -11,15 +11,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "The optimal value is 4.072623873503658e-11\n",
-      "Ul = -0.0000\n",
-      "Um = -0.0000\n",
-      "Uu = -0.0000\n",
-      "Kml = 0.0000\n",
-      "Kum = 0.0000\n",
-      "Vm = 1.0000\n",
-      "Vu = 1.0000\n",
-      "The norm of the residual is  6.381711270109027e-06\n"
+      "The optimal value is 4.4944717676283175e+19\n",
+      "Ul = 160761.3275\n",
+      "Um = 215272.2738\n",
+      "Uu = -12495.6420\n",
+      "Kml = -88845.5029\n",
+      "Kum = 17430289.4647\n",
+      "Vm = 44.1972\n",
+      "Vu = 198.5966\n",
+      "The norm of the residual is  6704082165.090394\n"
      ]
     }
    ],
@@ -28,7 +28,12 @@
     "import cvxpy as cp\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"output_site_null_ewh.csv\")\n",
+    "type = 2  # Change this to 1 for HPWH\n",
+    "if type == 1:\n",
+    "    df = pd.read_csv(\"output_site_null.csv\")\n",
+    "\n",
+    "else:\n",
+    "    df = pd.read_csv(\"output_site_null_ewh.csv\")\n",
     "\n",
     "# Constants\n",
     "cp_val = 4181.3\n",
@@ -38,9 +43,9 @@
     "V = 250 #(L)\n",
     "\n",
     "# Data\n",
-    "T_u = df[\"T_WH3\"].values\n",
-    "T_m = df[\"T_WH7\"].values\n",
-    "T_l = df[\"T_WH10\"].values\n",
+    "T_u = [value if mode == \"Upper On\" else 0 for value, mode in zip(df[\"Average Electric Power\"], df[\"Water Heating Mode\"])]\n",
+    "T_m = [value if mode == \"Lower On\" else 0 for value, mode in zip(df[\"Average Electric Power\"], df[\"Water Heating Mode\"])]\n",
+    "T_l = df[\"T_WH12\"].values\n",
     "\n",
     "W_list = []\n",
     "z_list = []\n",
@@ -68,10 +73,10 @@
     "    # not sure what this should be\n",
     "    z_j = np.array([\n",
     "        # δtpu upper node\n",
-    "        rho * cp_val * (T_u[j+1] - T_u[j]), #Power node 3 * time interval (60s?)\n",
+    "        dt * (T_u[j]), #Power node 3 * time interval (60s?)\n",
     "\n",
     "        # δtpm middle node\n",
-    "        rho * cp_val * (T_m[j+1] - T_m[j]),\n",
+    "        dt * (T_m[j]),\n",
     "\n",
     "        # lower node energy change\n",
     "        V * rho * cp_val * (T_l[j] - T_l[j+1]) #node 16 cold water input\n",
@@ -101,25 +106,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "80955c27",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.00000000e+00,  0.00000000e+00,  2.64034763e+01,\n",
-       "         0.00000000e+00,  1.30645071e-06,  0.00000000e+00,\n",
-       "        -1.83262222e+05],\n",
-       "       [ 0.00000000e+00,  2.64034750e+01,  0.00000000e+00,\n",
-       "         2.84034750e+01, -1.30645071e-06, -1.83304418e+05,\n",
+       "array([[ 0.00000000e+00,  0.00000000e+00, -1.76000000e+02,\n",
+       "         0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
        "         0.00000000e+00],\n",
-       "       [-2.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
-       "        -2.84034750e+01,  0.00000000e+00, -0.00000000e+00,\n",
-       "        -0.00000000e+00]])"
+       "       [ 0.00000000e+00, -1.76000000e+02,  0.00000000e+00,\n",
+       "        -3.86819350e+02,  0.00000000e+00,  0.00000000e+00,\n",
+       "         0.00000000e+00],\n",
+       "       [ 2.10819350e+02,  0.00000000e+00,  0.00000000e+00,\n",
+       "         3.86819350e+02,  0.00000000e+00,  4.08005133e+05,\n",
+       "         4.08005133e+05]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,14 +135,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "f8157f4b",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Rearrange energy balance formulas to compute T[j + 1]\n",
     "\n",
-    "def predict_temperatures(T_init, timesteps, theta, dt=1, cp=4181.3, rho=1000, T_a=22, V =250):\n",
+    "def predict_temperatures(T_init, timesteps, theta, draws, dt=1, cp=4181.3, rho=1000, T_a=22, V =250):\n",
     "    Ul, Um, Uu, Kml, Kum, Vm, Vu = theta\n",
     "    Vl = V - Vm  - Vu\n",
     "    Tu_pred, Tm_pred, Tl_pred = [], [], []\n",
@@ -147,29 +152,30 @@
     "    Tm_pred.append(T_init[1])\n",
     "    Tl_pred.append(T_init[2])\n",
     "\n",
-    "    for _ in range(timesteps):\n",
+    "    for t in range(timesteps - 1):\n",
     "        Tu = Tu_pred[-1] #get last predictions\n",
     "        Tm = Tm_pred[-1]\n",
     "        Tl = Tl_pred[-1]\n",
+    "        vt = draws[t] #draws\n",
     "\n",
-    "        #rearrange energy balance equations\n",
+    "        #rearrange energy balance equations for Euler Update\n",
     "        # Upper node\n",
     "        Tu_next = Tu + (1 / (rho * cp * Vu)) * (\n",
-    "            Uu * dt * (T_a - Tu) +\n",
-    "            Kum * dt * (Tm - Tu)\n",
+    "            Uu * dt * vt * (T_a - Tu) +\n",
+    "            Kum * dt * vt * (Tm - Tu)\n",
     "        )\n",
     "\n",
     "        # Middle node\n",
     "        Tm_next = Tm + (1 / (rho * cp * Vm)) * (\n",
-    "            Um * dt * (T_a - Tm) +\n",
-    "            Kml * dt * (Tl - Tm) +\n",
-    "            Kum * dt * (Tu - Tm)\n",
+    "            Um * dt * vt *  (T_a - Tm) +\n",
+    "            Kml * dt * vt * (Tl - Tm) +\n",
+    "            Kum * dt * vt * (Tu - Tm)\n",
     "        )\n",
     "\n",
     "        # Lower node\n",
     "        Tl_next = Tl - (1 / (rho * cp * (V + Vm + Vu)))  *(\n",
-    "            Ul * dt * (Tl - T_a) +\n",
-    "            Kml * dt * (Tl - Tm)\n",
+    "            Ul * dt * vt *  (Tl - T_a) +\n",
+    "            Kml * dt * vt * (Tl - Tm)\n",
     "        )\n",
     "\n",
     "        Tu_pred.append(Tu_next)\n",
@@ -190,78 +196,110 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3561fa0",
+   "id": "7231f103",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Draw Data (L)'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\janel\\anaconda3\\envs\\ochreEnv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[1;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'Draw Data (L)'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[20], line 21\u001b[0m\n\u001b[0;32m     19\u001b[0m t_m \u001b[38;5;241m=\u001b[39m val_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mT_WH10\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39miloc[index]\n\u001b[0;32m     20\u001b[0m t_l \u001b[38;5;241m=\u001b[39m val_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mT_WH12\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39miloc[index]\n\u001b[1;32m---> 21\u001b[0m draws \u001b[38;5;241m=\u001b[39m \u001b[43mval_data\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mDraw Data (L)\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39miloc[index: index \u001b[38;5;241m+\u001b[39m window_size]\u001b[38;5;241m.\u001b[39mreset_index(drop\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m     23\u001b[0m y_pred \u001b[38;5;241m=\u001b[39m predict_temperatures([t_u, t_m, t_l], window_size, theta\u001b[38;5;241m.\u001b[39mvalue, draws)\n\u001b[0;32m     24\u001b[0m y_true \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m     25\u001b[0m     val_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mT_WH3\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39miloc[index  : index  \u001b[38;5;241m+\u001b[39m window_size]\u001b[38;5;241m.\u001b[39mvalues,\n\u001b[0;32m     26\u001b[0m     val_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mT_WH10\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39miloc[index : index  \u001b[38;5;241m+\u001b[39m window_size]\u001b[38;5;241m.\u001b[39mvalues,\n\u001b[0;32m     27\u001b[0m     val_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mT_WH12\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39miloc[index : index \u001b[38;5;241m+\u001b[39m window_size]\u001b[38;5;241m.\u001b[39mvalues\n\u001b[0;32m     28\u001b[0m ]\n",
+      "File \u001b[1;32mc:\\Users\\janel\\anaconda3\\envs\\ochreEnv\\Lib\\site-packages\\pandas\\core\\frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[1;32mc:\\Users\\janel\\anaconda3\\envs\\ochreEnv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3810\u001b[0m     ):\n\u001b[0;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'Draw Data (L)'"
+     ]
+    }
+   ],
    "source": [
-    "df"
+    "import pandas as pd\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "# Choose data based on type\n",
+    "\n",
+    "if type == 1:  # HPWH\n",
+    "    val_data = pd.read_csv(\"output_site_90023.csv\")\n",
+    "else:  # EWH\n",
+    "    val_data = pd.read_csv(\"output_site_90023_ewh.csv\")\n",
+    "\n",
+    "# Parameters\n",
+    "window_size = 8\n",
+    "predictions = []\n",
+    "true_values = []\n",
+    "\n",
+    "# Sanity check, iterate through idle\n",
+    "for index in range(len(val_data) - window_size):\n",
+    "    t_u = val_data['T_WH3'].iloc[index]\n",
+    "    t_m = val_data['T_WH10'].iloc[index]\n",
+    "    t_l = val_data['T_WH12'].iloc[index]\n",
+    "    draws = val_data['Draw Data'].iloc[index: index + window_size].reset_index(drop=True)\n",
+    "    \n",
+    "    y_pred = predict_temperatures([t_u, t_m, t_l], window_size, theta.value, draws)\n",
+    "    y_true = [\n",
+    "        val_data['T_WH3'].iloc[index  : index  + window_size].values,\n",
+    "        val_data['T_WH10'].iloc[index : index  + window_size].values,\n",
+    "        val_data['T_WH12'].iloc[index : index + window_size].values\n",
+    "    ]\n",
+    "    \n",
+    "    predictions.append(y_pred)\n",
+    "    true_values.append(y_true)\n",
+    "    index += 1\n",
+    "\n",
+    "# Flatten lists for metrics, depending on model output format\n",
+    "# Example: compute MSE for each level\n",
+    "import numpy as np\n",
+    "\n",
+    "y_pred_array = np.array(predictions)  # shape: (n_samples, 3, window_size) or similar\n",
+    "y_true_array = np.array(true_values)\n",
+    "\n",
+    "mse_upper = mean_squared_error(y_true_array[:, 0, :].flatten(), y_pred_array[:, 0, :].flatten())\n",
+    "mse_middle = mean_squared_error(y_true_array[:, 1, :].flatten(), y_pred_array[:, 1, :].flatten())\n",
+    "mse_lower = mean_squared_error(y_true_array[:, 2, :].flatten(), y_pred_array[:, 2, :].flatten())\n",
+    "\n",
+    "print(f\"MSE Upper: {mse_upper:.3f}\")\n",
+    "print(f\"MSE Middle: {mse_middle:.3f}\")\n",
+    "print(f\"MSE Lower: {mse_lower:.3f}\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "206280ab",
+   "id": "5f540002",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([48.40347626, 48.40347626, 48.40347626, 48.40347626, 48.40347626,\n",
-       "        48.40347626, 48.40347626, 48.40347626, 48.40347626, 48.40347626,\n",
-       "        48.40347626, 48.40347626, 48.40347626, 48.40347626, 48.40347626,\n",
-       "        48.40347626]),\n",
-       " array([48.40347495, 48.40347495, 48.40347495, 48.40347495, 48.40347495,\n",
-       "        48.40347495, 48.40347495, 48.40347495, 48.40347495, 48.40347495,\n",
-       "        48.40347495, 48.40347495, 48.40347495, 48.40347495, 48.40347495,\n",
-       "        48.40347495]),\n",
-       " array([20., 20., 20., 20., 20., 20., 20., 20., 20., 20., 20., 20., 20.,\n",
-       "        20., 20., 20.]))"
+       "0.0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predict_temperatures([48.4034762611966,48.403474954745896,20], 15, theta.value)\n",
-    "\n",
-    "\n",
-    "if type == 1: # HPWH\n",
-    "    val_data = pd.read_csv(\"output_site_90159.csv\")\n",
-    "\n",
-    "else: #EWH\n",
-    "    val_data = pd.read_csv(\"output_site_90159_ewh.csv\") \n",
-    "\n",
-    "#val_data = pd.read_csv(\"output_site_90023_ewh.csv\")\n",
-    "#val_data = pd.read_csv(\"output_site_10441.csv\")\n",
-    "#val_data = pd.read_csv(\"output_site_null.csv\")\n",
-    "X_val, y_val = csv_to_features(val_data, type)\n",
-    "\n",
-    "#filter out temperatures below 40\n",
-    "X_val_filtered = []\n",
-    "y_val_filtered = []\n",
-    "for x, y in zip(X_val, y_val):\n",
-    "    if all(val >= 40 for val in y):\n",
-    "        X_val_filtered.append(x)\n",
-    "        y_val_filtered.append(y)\n",
-    "X_val = X_val_filtered\n",
-    "y_val = y_val_filtered\n",
-    "\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "\n",
-    "#error metrics\n",
-    "from sklearn.metrics import r2_score\n",
-    "y_predict_val = model.predict(X_val)\n",
-    "\n",
-    "r_2_val = r2_score(y_val, y_predict_val)\n",
-    "print(f\"test coefficient of determination: {r_2_val}\")\n",
-    "\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "\n",
-    "mse = mean_squared_error(y_val, y_predict_val, multioutput='uniform_average')\n",
-    "print(\"Mean Squared Error:\", mse)\n"
+    "draws = val_data['Draw Data (L)'].iloc[index: index + window_size]\n",
+    "draws[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8725f4f9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
