Added in Non-Linear Optimization

--- a/bin/run_setpoint_opt_model.ipynb
+++ b/bin/run_setpoint_opt_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,9 +81,9 @@
     "\n",
     "  # Construct the problem.\n",
     "  #declare variables\n",
-    "  T = cp.Variable(i)\n",
+    "  T = cp.Variable(i) #Temperatures \n",
     "  s = cp.Variable(i) #setpoint variables\n",
-    "  z = cp.Variable(i)\n",
+    "  z = cp.Variable(i) #unmet demand\n",
     "  objective = cp.Minimize(cp.sum(lambda_ * z**2 + (lambda_*l) * s))\n",
     "\n",
     "  constraints = [\n",
