--- a/bin/run_physics_model.ipynb
+++ b/bin/run_physics_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "80dc619c",
    "metadata": {},
    "outputs": [
@@ -11,15 +11,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "The optimal value is 4.4944717676283175e+19\n",
-      "Ul = 160761.3275\n",
-      "Um = 215272.2738\n",
-      "Uu = -12495.6420\n",
-      "Kml = -88845.5029\n",
-      "Kum = 17430289.4647\n",
-      "Vm = 44.1972\n",
-      "Vu = 198.5966\n",
-      "The norm of the residual is  6704082165.090394\n"
+      "The optimal value is 2.171681078458453e+19\n",
+      "Ul = 236869.9054\n",
+      "Um = -152650.9392\n",
+      "Uu = -5704.3321\n",
+      "Kml = 917171.3392\n",
+      "Kum = 927299.7436\n",
+      "Vm = 40.3624\n",
+      "Vu = 50.1466\n",
+      "The norm of the residual is  4660129910.698255\n"
      ]
     }
    ],
@@ -28,9 +28,9 @@
     "import cvxpy as cp\n",
     "import pandas as pd\n",
     "\n",
-    "type = 2  # Change this to 1 for HPWH\n",
+    "type = 1  # Change this to 1 for HPWH\n",
     "if type == 1:\n",
-    "    df = pd.read_csv(\"output_site_null.csv\")\n",
+    "    df = pd.read_csv(\"output_site_null_60_12.csv\")\n",
     "\n",
     "else:\n",
     "    df = pd.read_csv(\"output_site_null_ewh.csv\")\n",
@@ -43,8 +43,10 @@
     "V = 250 #(L)\n",
     "\n",
     "# Data\n",
-    "T_u = [value if mode == \"Upper On\" else 0 for value, mode in zip(df[\"Average Electric Power\"], df[\"Water Heating Mode\"])]\n",
-    "T_m = [value if mode == \"Lower On\" else 0 for value, mode in zip(df[\"Average Electric Power\"], df[\"Water Heating Mode\"])]\n",
+    "P_u = [value if mode == \"Upper On\" else 0 for value, mode in zip(df[\"Average Electric Power\"], df[\"Water Heating Mode\"])]\n",
+    "P_m = [value if mode == \"Lower On\" else 0 for value, mode in zip(df[\"Average Electric Power\"], df[\"Water Heating Mode\"])]\n",
+    "T_u = df[\"T_WH3\"].values\n",
+    "T_m = df[\"T_WH10\"].values\n",
     "T_l = df[\"T_WH12\"].values\n",
     "\n",
     "W_list = []\n",
@@ -73,10 +75,10 @@
     "    # not sure what this should be\n",
     "    z_j = np.array([\n",
     "        # δtpu upper node\n",
-    "        dt * (T_u[j]), #Power node 3 * time interval (60s?)\n",
+    "        dt * (P_u[j]), #Power node 3 * time interval (60s?)\n",
     "\n",
     "        # δtpm middle node\n",
-    "        dt * (T_m[j]),\n",
+    "        dt * (P_m[j]),\n",
     "\n",
     "        # lower node energy change\n",
     "        V * rho * cp_val * (T_l[j] - T_l[j+1]) #node 16 cold water input\n",
@@ -106,36 +108,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "80955c27",
+   "execution_count": 98,
+   "id": "7c7f4daf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.00000000e+00,  0.00000000e+00, -1.76000000e+02,\n",
-       "         0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
-       "         0.00000000e+00],\n",
-       "       [ 0.00000000e+00, -1.76000000e+02,  0.00000000e+00,\n",
-       "        -3.86819350e+02,  0.00000000e+00,  0.00000000e+00,\n",
-       "         0.00000000e+00],\n",
-       "       [ 2.10819350e+02,  0.00000000e+00,  0.00000000e+00,\n",
-       "         3.86819350e+02,  0.00000000e+00,  4.08005133e+05,\n",
-       "         4.08005133e+05]])"
+       "[]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "W_list[0]"
+    "T_u_positive = [value for value in T_u if value > 0]\n",
+    "T_u_positive"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 100,
    "id": "f8157f4b",
    "metadata": {},
    "outputs": [],
@@ -195,29 +190,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "id": "7231f103",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'Draw Data (L)'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\janel\\anaconda3\\envs\\ochreEnv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[1;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'Draw Data (L)'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 21\u001b[0m\n\u001b[0;32m     19\u001b[0m t_m \u001b[38;5;241m=\u001b[39m val_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mT_WH10\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39miloc[index]\n\u001b[0;32m     20\u001b[0m t_l \u001b[38;5;241m=\u001b[39m val_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mT_WH12\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39miloc[index]\n\u001b[1;32m---> 21\u001b[0m draws \u001b[38;5;241m=\u001b[39m \u001b[43mval_data\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mDraw Data (L)\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39miloc[index: index \u001b[38;5;241m+\u001b[39m window_size]\u001b[38;5;241m.\u001b[39mreset_index(drop\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m     23\u001b[0m y_pred \u001b[38;5;241m=\u001b[39m predict_temperatures([t_u, t_m, t_l], window_size, theta\u001b[38;5;241m.\u001b[39mvalue, draws)\n\u001b[0;32m     24\u001b[0m y_true \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m     25\u001b[0m     val_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mT_WH3\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39miloc[index  : index  \u001b[38;5;241m+\u001b[39m window_size]\u001b[38;5;241m.\u001b[39mvalues,\n\u001b[0;32m     26\u001b[0m     val_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mT_WH10\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39miloc[index : index  \u001b[38;5;241m+\u001b[39m window_size]\u001b[38;5;241m.\u001b[39mvalues,\n\u001b[0;32m     27\u001b[0m     val_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mT_WH12\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39miloc[index : index \u001b[38;5;241m+\u001b[39m window_size]\u001b[38;5;241m.\u001b[39mvalues\n\u001b[0;32m     28\u001b[0m ]\n",
-      "File \u001b[1;32mc:\\Users\\janel\\anaconda3\\envs\\ochreEnv\\Lib\\site-packages\\pandas\\core\\frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[1;32mc:\\Users\\janel\\anaconda3\\envs\\ochreEnv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3810\u001b[0m     ):\n\u001b[0;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'Draw Data (L)'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE Upper: 1.303\n",
+      "MSE Middle: 7.826\n",
+      "MSE Lower: 49.976\n"
      ]
     }
    ],
@@ -236,6 +219,8 @@
     "window_size = 8\n",
     "predictions = []\n",
     "true_values = []\n",
+    "\n",
+    "val_data = val_data[val_data['Hot Water Outlet Temperature (C)'] >= 40] #filter for above 40 temperatures\n",
     "\n",
     "# Sanity check, iterate through idle\n",
     "for index in range(len(val_data) - window_size):\n",
@@ -259,7 +244,7 @@
     "# Example: compute MSE for each level\n",
     "import numpy as np\n",
     "\n",
-    "y_pred_array = np.array(predictions)  # shape: (n_samples, 3, window_size) or similar\n",
+    "y_pred_array = np.array(predictions)  # shape: (n_sam09ples, 3, window_size) or similar\n",
     "y_true_array = np.array(true_values)\n",
     "\n",
     "mse_upper = mean_squared_error(y_true_array[:, 0, :].flatten(), y_pred_array[:, 0, :].flatten())\n",
@@ -273,33 +258,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5f540002",
+   "execution_count": 87,
+   "id": "e8d39eac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "(array([48.40347495, 48.40347495, 48.40347495, 48.40347495, 48.40347495,\n",
+       "        48.40347495, 48.40347495, 48.40347495]),\n",
+       " array([48.40347626, 48.40347626, 48.40347626, 48.40347626, 48.40347626,\n",
+       "        48.40347626, 48.40347626, 48.40347626]),\n",
+       " array([48.40347495, 48.40347495, 48.40347495, 48.40347495, 48.40347495,\n",
+       "        48.40347495, 48.40347495, 48.40347495]))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "draws = val_data['Draw Data (L)'].iloc[index: index + window_size]\n",
-    "draws[0]"
+    "predictions[0]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8725f4f9",
+   "execution_count": 102,
+   "id": "5f540002",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "470709e2abe247c69de4805aea3d7979",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=25, description='Day:', max=9676), IntSlider(value=0, description='Hour:…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.plot_predictions_by_hour(day, hour)>"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from datetime import datetime\n",
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display\n",
+    "import matplotlib.dates as mdates\n",
+    "\n",
+    "#Predictions for 1 timestep\n",
+    "\n",
+    "# Constants\n",
+    "intervals = 96  # 1440 minutes / 15 min interval = 96 per day\n",
+    "year = \"2013\"\n",
+    "window = 8\n",
+    "\n",
+    "\n",
+    "# Create datetime labels for x-axis\n",
+    "start_time = datetime(2013, 1, 1, 0, 0)\n",
+    "end_time = datetime(2013, 1, 1, 23, 59)\n",
+    "datetime_list = pd.date_range(start=start_time, end=end_time, freq=\"15min\")\n",
+    "time_labels = [dt.strftime(\"%H:%M\") for dt in datetime_list]\n",
+    "\n",
+    "import copy\n",
+    "# Interactive plot function\n",
+    "def plot_predictions_by_hour(day, hour):\n",
+    "    plt.figure(figsize=(10, 5))\n",
+    "    \n",
+    "    start_idx = intervals * day\n",
+    "    \n",
+    "    x_day = (val_data[start_idx : start_idx + intervals])\n",
+    "    predictions_day = predictions[start_idx : start_idx + intervals]\n",
+    "    actual_day = true_values[start_idx : start_idx + intervals]\n",
+    "    draw_data_day = x_day['Draw Data']\n",
+    "    power_day = x_day['Average Electric Power']\n",
+    "\n",
+    "\n",
+    "    time_idx = hour * 4  # 4 intervals per hour\n",
+    "\n",
+    "    pred_times = time_labels[time_idx : time_idx + 8]\n",
+    "    y_pred = predictions_day[time_idx] #returns predictions for top, middle, and bottom nodes\n",
+    "    y_true = actual_day[time_idx] \n",
+    "\n",
+    "\n",
+    "    draw_slice = draw_data_day[time_idx : time_idx + 8]\n",
+    "    power_slice = power_day[time_idx : time_idx + 8] * 100\n",
+    "\n",
+    "    # Convert day number to readable date\n",
+    "    day_num = str((day + 17) % 365).rjust(3, '0')\n",
+    "    date_label = datetime.strptime(year + \"-\" + day_num, \"%Y-%j\").strftime(\"%m-%d-%Y\")\n",
+    "\n",
+    "    # Primary axis for temperatures\n",
+    "    fig, ax1 = plt.subplots(figsize=(10, 5))\n",
+    "\n",
+    "    ax1.plot(pred_times, y_true[0], label=\"Actual Outlet Temp\", color=\"black\", marker='o')\n",
+    "    ax1.plot(pred_times, y_pred[0], label=\"Predicted Outlet Temp\", color=\"orange\", marker='x', linestyle=\"--\")\n",
+    "    ax1.set_ylabel(\"Temperature (°C)\")\n",
+    "    ax1.set_title(f\"{date_label} @ {time_labels[time_idx]} — Predictions for t+0 to t+7\")\n",
+    "    ax1.set_xticks(pred_times)\n",
+    "    ax1.set_xticklabels(pred_times, rotation=45)\n",
+    "    ax1.grid(True)\n",
+    "\n",
+    "    # Secondary axis for water draw\n",
+    "        # Secondary axis for water draw\n",
+    "    ax2 = ax1.twinx()\n",
+    "    ax2.plot(pred_times, draw_slice, label=\"Water Drawn (L)\", color=\"blue\", linestyle=\"dotted\", marker='s')\n",
+    "    ax2.plot(pred_times, power_slice, label=\"Average Power (kWH)\", color = \"green\")\n",
+    "    ax2.set_ylabel(\"Water Drawn (L)\")\n",
+    "    ax2.set_ylim(0, 200)  # Ensure 0 is at the bottom\n",
+    "\n",
+    "\n",
+    "    # Combined legend\n",
+    "    lines_1, labels_1 = ax1.get_legend_handles_labels()\n",
+    "    lines_2, labels_2 = ax2.get_legend_handles_labels()\n",
+    "    ax1.legend(lines_1 + lines_2, labels_1 + labels_2, loc='upper left', bbox_to_anchor=(1.05, 1))\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "    print(power_slice/100)\n",
+    "\n",
+    "# Slider widgets\n",
+    "day_slider = widgets.IntSlider(value=25, min=0, max=len(val_data)//intervals - 1, step=1, description=\"Day:\")\n",
+    "hour_slider = widgets.IntSlider(value=0, min=0, max=23, step=1, description=\"Hour:\")\n",
+    "\n",
+    "# Display interactive plot\n",
+    "widgets.interact(plot_predictions_by_hour, day=day_slider, hour=hour_slider)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
