doc updates for user tutorial

--- a/notebook/user_tutorial.ipynb
+++ b/notebook/user_tutorial.ipynb
@@ -62,8 +62,13 @@
    "source": [
     "### <a name=\"online\"></a>Running online\n",
     "\n",
-    "OCHRE can be run through an interactive Jupyter notebook. You may need to run\n",
-    "the code below and restart the notebook to install OCHRE.\n"
+    "OCHRE can be run online through an interactive Jupyter notebook. The code\n",
+    "below will install OCHRE in the current environment.\n",
+    "\n",
+    "**Note for Google Colab users**: You may need to restart the notebook after\n",
+    "installing OCHRE (see Runtime > Restart Session). There may be errors or\n",
+    "warnings about dependency issues, but these will not affect the code in this\n",
+    "notebook.\n"
    ]
   },
   {
