Added 2 Node Non Linear Optimization

--- a/bin/run_physics_model.ipynb
+++ b/bin/run_physics_model.ipynb
@@ -11,15 +11,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "The optimal value is 2.171681078458453e+19\n",
-      "Ul = 236869.9054\n",
-      "Um = -152650.9392\n",
-      "Uu = -5704.3321\n",
-      "Kml = 917171.3392\n",
-      "Kum = 927299.7436\n",
+      "The optimal value is 2.171681091905777e+19\n",
+      "Ul = 236869.9329\n",
+      "Um = -152652.6088\n",
+      "Uu = -5705.9801\n",
+      "Kml = 917171.4648\n",
+      "Kum = 927300.0998\n",
       "Vm = 40.3624\n",
       "Vu = 50.1466\n",
-      "The norm of the residual is  4660129910.698255\n"
+      "The norm of the residual is  4660129925.126313\n"
      ]
     }
    ],
@@ -39,12 +39,14 @@
     "cp_val = 4181.3\n",
     "rho = 1000\n",
     "dt = 8 #what should this be? euler steps per timestep?\n",
-    "T_a = 22\n",
+    "T_a = 22 #ambient temperature\n",
     "V = 250 #(L)\n",
+    "t_in_wet = 62.25 #relative humidity\n",
     "\n",
     "# Data\n",
     "P_u = [value if mode == \"Upper On\" else 0 for value, mode in zip(df[\"Average Electric Power\"], df[\"Water Heating Mode\"])]\n",
-    "P_m = [value if mode == \"Lower On\" else 0 for value, mode in zip(df[\"Average Electric Power\"], df[\"Water Heating Mode\"])]\n",
+    "P_m = [value if mode == \"Heat Pump On\" else 0 for value, mode in zip(df[\"Average Electric Power\"], df[\"Water Heating Mode\"])]\n",
+    "P_l = [value if mode == \"Lower On\" else 0 for value, mode in zip(df[\"Average Electric Power\"], df[\"Water Heating Mode\"])]\n",
     "T_u = df[\"T_WH3\"].values\n",
     "T_m = df[\"T_WH10\"].values\n",
     "T_l = df[\"T_WH12\"].values\n",
@@ -72,13 +74,19 @@
     "    Wj[2, 5] = -rho * cp_val * (T_l[j+1] - T_l[j])  # -V_m\n",
     "    Wj[2, 6] = -rho * cp_val * (T_l[j+1] - T_l[j])  # -V_u\n",
     "\n",
+    "    # curve format: [1, t_in_wet, t_in_wet ** 2, t_lower, t_lower ** 2, t_lower * t_in_wet]\n",
+    "    t_lower = T_l[j]\n",
+    "    cop_coeff = np.array([1.1332, 0.063, -0.0000979, -0.00972, -0.0000214, -0.000686])\n",
+    "    curve_var = np.array([1, t_in_wet, t_in_wet ** 2, t_lower, t_lower ** 2, t_lower * t_in_wet ])\n",
+    "    \n",
+    "    \n",
     "    # not sure what this should be\n",
     "    z_j = np.array([\n",
     "        # δtpu upper node\n",
-    "        dt * (P_u[j]), #Power node 3 * time interval (60s?)\n",
+    "        dt * (P_u[j]), #Power node 3 * time interval (60s?) #upper element\n",
     "\n",
-    "        # δtpm middle node\n",
-    "        dt * (P_m[j]),\n",
+    "        # δtpm middle node lower node/ heat pump\n",
+    "        dt * ((P_m[j] * (np.matmul(cop_coeff, curve_var.T))) + P_l[j]),  # dependent on heat pump being on consider starting temperature below 49\n",
     "\n",
     "        # lower node energy change\n",
     "        V * rho * cp_val * (T_l[j] - T_l[j+1]) #node 16 cold water input\n",
@@ -130,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "id": "f8157f4b",
    "metadata": {},
    "outputs": [],
@@ -190,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 8,
    "id": "7231f103",
    "metadata": {},
    "outputs": [
@@ -198,9 +206,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE Upper: 1.303\n",
-      "MSE Middle: 7.826\n",
-      "MSE Lower: 49.976\n"
+      "MSE Upper: 13.365\n",
+      "MSE Middle: 75.945\n",
+      "MSE Lower: 92.200\n",
+      "RMSE Upper: 3.655861706679929\n",
+      "RMSE Middle: 8.714624634918259\n",
+      "RMSE Lower: 9.602061219758916\n"
      ]
     }
    ],
@@ -211,7 +222,7 @@
     "# Choose data based on type\n",
     "\n",
     "if type == 1:  # HPWH\n",
-    "    val_data = pd.read_csv(\"output_site_90023.csv\")\n",
+    "    val_data = pd.read_csv(\"output_site_90159.csv\")\n",
     "else:  # EWH\n",
     "    val_data = pd.read_csv(\"output_site_90023_ewh.csv\")\n",
     "\n",
@@ -253,7 +264,11 @@
     "\n",
     "print(f\"MSE Upper: {mse_upper:.3f}\")\n",
     "print(f\"MSE Middle: {mse_middle:.3f}\")\n",
-    "print(f\"MSE Lower: {mse_lower:.3f}\")\n"
+    "print(f\"MSE Lower: {mse_lower:.3f}\")\n",
+    "\n",
+    "print(f\"RMSE Upper: {np.sqrt(mse_upper)}\")\n",
+    "print(f\"RMSE Middle: {np.sqrt(mse_middle)}\")\n",
+    "print(f\"RMSE Lower: {np.sqrt(mse_lower)}\")\n"
    ]
   },
   {
@@ -284,14 +299,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 106,
    "id": "5f540002",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "470709e2abe247c69de4805aea3d7979",
+       "model_id": "fe860cb60fc340e98b3af45dc0fd052b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -308,7 +323,7 @@
        "<function __main__.plot_predictions_by_hour(day, hour)>"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
